@@ -1,3 +1,8 @@
+2009-02-16  Curtis Gedak  <gedakc@gmail.com>
+
+	* include/Partition.h,
+	  src/Partition.cc: Added strict_start indicator.
+
 2009-02-13  Curtis Gedak  <gedakc@gmail.com>
 
 	* configure.in: Append -svn to version for continuing development
